# Projeto-ML

./: README.md
projetonovo/: pyproject.toml
projetonovo/src/: app.py
projetonovo/tests/: teste.ipynb
